--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,5 @@
 .home-page {
+  padding-top: 56px;
 }
 
 /* NAVBAR */
@@ -6,8 +7,6 @@
   background: #ffffff;
   box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04);
   z-index: 1000;
-  top: 0;
-  position: sticky;
 
   .brand-logo {
     font-weight: 700;
